tests/typing/good/testfile-variance-2.scala

class T[+A] { def m[B>:A]() {} }
object Main { def main(args: Array[String]) { } }
