tests/typing/bad/testfile-cyclic1-1.scala
class A extends A {}
object Main { def main(args: Array[String]) { } }
